post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: demo-micro-service-development
  labels:
    app: post-service
spec:
  type: ClusterIP
  ports:
    - port: 1332
      targetPort: 1332
  selector:
    app: post-service
