user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: demo-micro-service-development
  labels:
    app: user-service
spec:
  type: LoadBalancer
  ports:
    - port: 1331
      targetPort: 1331
  selector:
    app: user-service
